--- a/materialize-src/sass/main.scss
+++ b/materialize-src/sass/main.scss
@@ -1,4 +1,4 @@
 @import 'materialize.scss';
 @import './components/home';
 @import './components/index';
-@import './components/aboutUs';
+@import './aboutUs';
