--- a/css/main.css
+++ b/css/main.css
@@ -9017,25 +9017,71 @@ html {
 }
 
 #home {
-  padding: 3rem 3rem;
+  padding: 8rem 8rem;
+  border: 3px solid red;
 }
 
 blockquote {
   font-weight: 300;
   font-size: 2rem;
+}
+
+#title_div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.other_titles {
+  margin-top: 6rem;
+  margin-bottom: 2rem;
+}
+
+.podcast_title {
+  font-size: 1rem;
+  color: red;
 }
 
 #home {
-  padding: 3rem 3rem;
+  padding: 8rem 8rem;
+  border: 3px solid red;
 }
 
 blockquote {
   font-weight: 300;
   font-size: 2rem;
+}
+
+#title_div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.other_titles {
+  margin-top: 6rem;
+  margin-bottom: 2rem;
+}
+
+.podcast_title {
+  font-size: 1rem;
+  color: red;
 }
 
 html {
   background-color: #f4f4f4;
+}
+
+#aboutus {
+  padding: 3rem 3rem;
 }
 
 #timeline {
