--- a/css/materialize.css
+++ b/css/materialize.css
@@ -9023,7 +9023,7 @@ html {
 
 blockquote {
   font-weight: 300;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 #title_div {
@@ -9036,12 +9036,16 @@ blockquote {
           flex-direction: column;
 }
 
+#title_card {
+  display: inline-block;
+}
+
 #recommendation_div {
   width: 50%;
 }
 
 .other_titles {
-  margin-top: 6rem;
+  margin-top: 10rem;
   margin-bottom: 2rem;
 }
 
@@ -9068,7 +9072,9 @@ blockquote {
 }
 
 .waves-effect .waves-teal .waves-ripple {
-  /* The alpha value allows the text and background color
-   of the button to still show through. */
   background-color: #00eaff;
+}
+
+.sub_btn {
+  background-color: white;
 }
