--- a/materialize-src/sass/components/_variables.scss
+++ b/materialize-src/sass/components/_variables.scss
@@ -44,6 +44,7 @@ $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
 
 $scrollBar-color: #c4c4c4;
+$watermark-color: #B7F0F5;
 // 2. Badges
 // ==========================================================================
 
