--- a/materialize-src/sass/components/_variables.scss
+++ b/materialize-src/sass/components/_variables.scss
@@ -34,11 +34,14 @@
 // 1. Colors
 // ==========================================================================
 
-$primary-color: #022444 !default;
+// $primary-color: #022444 !default;
+$primary-color: #00001e !default;
+
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-$secondary-color: #0c8d99 !default;
+// $secondary-color: #0c8d99 !default;
+$secondary-color: #022444 !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
@@ -102,7 +105,8 @@ $button-floating-radius: 50% !default;
 
 $card-padding: 24px !default;
 $card-bg-color: #fff !default;
-$card-link-color: color("orange", "accent-2") !default;
+// $card-link-color: color("orange", "accent-2") !default;
+$card-link-color: #0c8d99;
 $card-link-color-light: lighten($card-link-color, 20%) !default;
 
 
