--- a/css/main.css
+++ b/css/main.css
@@ -2679,7 +2679,7 @@ a {
 blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
-  border-left: 5px solid #022444;
+  border-left: 5px solid #00001e;
 }
 
 i {
@@ -2739,7 +2739,7 @@ video.responsive-video {
 }
 
 .pagination li.active {
-  background-color: #022444;
+  background-color: #00001e;
 }
 
 .pagination li.disabled a {
@@ -2938,7 +2938,7 @@ ul.staggered-list li {
 .page-footer {
   padding-top: 20px;
   color: #fff;
-  background-color: #022444;
+  background-color: #00001e;
 }
 
 .page-footer .footer-copyright {
@@ -3127,8 +3127,8 @@ td, th {
 }
 
 .collection .collection-item.active {
-  background-color: #0c8d99;
-  color: #c3f6fa;
+  background-color: #022444;
+  color: #64b2fa;
 }
 
 .collection .collection-item.active .secondary-content {
@@ -3139,7 +3139,7 @@ td, th {
   display: block;
   -webkit-transition: .25s;
   transition: .25s;
-  color: #0c8d99;
+  color: #022444;
 }
 
 .collection a.collection-item:not(.active):hover {
@@ -3162,7 +3162,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #0c8d99;
+  color: #022444;
 }
 
 .collapsible .collection {
@@ -3190,7 +3190,7 @@ td, th {
   height: 4px;
   display: block;
   width: 100%;
-  background-color: #7ceaf5;
+  background-color: #1a8cf8;
   border-radius: 2px;
   margin: 0.5rem 0 1rem 0;
   overflow: hidden;
@@ -3201,13 +3201,13 @@ td, th {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #0c8d99;
+  background-color: #022444;
   -webkit-transition: width .3s linear;
   transition: width .3s linear;
 }
 
 .progress .indeterminate {
-  background-color: #0c8d99;
+  background-color: #022444;
 }
 
 .progress .indeterminate:before {
@@ -3370,7 +3370,7 @@ span.badge.new {
   font-weight: 300;
   font-size: 0.8rem;
   color: #fff;
-  background-color: #0c8d99;
+  background-color: #022444;
   border-radius: 2px;
 }
 
@@ -4259,7 +4259,7 @@ table span.badge {
 
 nav {
   color: #fff;
-  background-color: #022444;
+  background-color: #00001e;
   width: 100%;
   height: 56px;
   line-height: 56px;
@@ -4743,7 +4743,7 @@ small {
 
 .card .card-title {
   font-size: 24px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 .card .card-title.activator {
@@ -4897,7 +4897,7 @@ small {
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
-  color: #ffab40;
+  color: #0c8d99;
   margin-right: 24px;
   -webkit-transition: color .3s ease;
   transition: color .3s ease;
@@ -4905,7 +4905,7 @@ small {
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating):hover {
-  color: #ffd8a6;
+  color: #1edced;
 }
 
 .card .card-reveal {
@@ -5053,7 +5053,7 @@ small {
 }
 
 .tabs .tab a {
-  color: rgba(2, 36, 68, 0.7);
+  color: rgba(0, 0, 30, 0.7);
   display: block;
   width: 100%;
   height: 100%;
@@ -5066,18 +5066,18 @@ small {
 }
 
 .tabs .tab a:focus, .tabs .tab a:focus.active {
-  background-color: rgba(4, 75, 142, 0.2);
+  background-color: rgba(0, 0, 107, 0.2);
   outline: none;
 }
 
 .tabs .tab a:hover, .tabs .tab a.active {
   background-color: transparent;
-  color: #022444;
+  color: #00001e;
 }
 
 .tabs .tab.disabled a,
 .tabs .tab.disabled a:hover {
-  color: rgba(2, 36, 68, 0.4);
+  color: rgba(0, 0, 30, 0.4);
   cursor: default;
 }
 
@@ -5085,7 +5085,7 @@ small {
   position: absolute;
   bottom: 0;
   height: 2px;
-  background-color: #044b8e;
+  background-color: #00006b;
   will-change: left, right;
 }
 
@@ -5222,13 +5222,13 @@ small {
 
 .btn:focus, .btn-large:focus, .btn-small:focus,
 .btn-floating:focus {
-  background-color: #08616a;
+  background-color: #010a12;
 }
 
 .btn, .btn-large, .btn-small {
   text-decoration: none;
   color: #fff;
-  background-color: #0c8d99;
+  background-color: #022444;
   text-align: center;
   letter-spacing: .5px;
   -webkit-transition: background-color .2s ease-out;
@@ -5237,7 +5237,7 @@ small {
 }
 
 .btn:hover, .btn-large:hover, .btn-small:hover {
-  background-color: #0ea3b1;
+  background-color: #03315d;
 }
 
 .btn-floating {
@@ -5250,7 +5250,7 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #0c8d99;
+  background-color: #022444;
   border-radius: 50%;
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
@@ -5259,7 +5259,7 @@ small {
 }
 
 .btn-floating:hover {
-  background-color: #0c8d99;
+  background-color: #022444;
 }
 
 .btn-floating:before {
@@ -5458,7 +5458,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #0c8d99;
+  background-color: #022444;
   border-radius: 50%;
   -webkit-transform: scale(0);
           transform: scale(0);
@@ -5558,7 +5558,7 @@ button.btn-floating {
 
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #0c8d99;
+  color: #022444;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -6059,12 +6059,12 @@ body.keyboard-focused .dropdown-content li:focus {
 }
 
 select:focus {
-  outline: 1px solid #9df0f7;
+  outline: 1px solid #3c9ef9;
 }
 
 button:focus {
   outline: none;
-  background-color: #0d9eac;
+  background-color: #032e58;
 }
 
 label {
@@ -6193,9 +6193,9 @@ input[type=tel]:not(.browser-default):focus:not([readonly]),
 input[type=number]:not(.browser-default):focus:not([readonly]),
 input[type=search]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #0c8d99;
-  -webkit-box-shadow: 0 1px 0 0 #0c8d99;
-          box-shadow: 0 1px 0 0 #0c8d99;
+  border-bottom: 1px solid #022444;
+  -webkit-box-shadow: 0 1px 0 0 #022444;
+          box-shadow: 0 1px 0 0 #022444;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -6211,7 +6211,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #0c8d99;
+  color: #022444;
 }
 
 input:not([type]):focus.valid ~ label,
@@ -6553,7 +6553,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
 }
 
 .input-field .prefix.active {
-  color: #0c8d99;
+  color: #022444;
 }
 
 .input-field .prefix ~ input,
@@ -6750,12 +6750,12 @@ textarea.materialize-textarea {
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:before,
 [type="radio"].with-gap:checked + span:after {
-  border: 2px solid #0c8d99;
+  border: 2px solid #022444;
 }
 
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:after {
-  background-color: #0c8d99;
+  background-color: #022444;
 }
 
 [type="radio"]:checked + span:after {
@@ -6877,8 +6877,8 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #0c8d99;
-  border-bottom: 2px solid #0c8d99;
+  border-right: 2px solid #022444;
+  border-bottom: 2px solid #022444;
   -webkit-transform: rotate(40deg);
           transform: rotate(40deg);
   -webkit-backface-visibility: hidden;
@@ -6900,7 +6900,7 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #0c8d99;
+  border-right: 2px solid #022444;
   border-bottom: none;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
@@ -6970,8 +6970,8 @@ textarea.materialize-textarea {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #0c8d99;
-  background-color: #0c8d99;
+  border: 2px solid #022444;
+  background-color: #022444;
   z-index: 0;
 }
 
@@ -6983,8 +6983,8 @@ textarea.materialize-textarea {
 
 [type="checkbox"].filled-in.tabbed:checked:focus + span:not(.lever):after {
   border-radius: 2px;
-  background-color: #0c8d99;
-  border-color: #0c8d99;
+  background-color: #022444;
+  border-color: #022444;
 }
 
 [type="checkbox"].filled-in:disabled:not(:checked) + span:not(.lever):before {
@@ -7028,7 +7028,7 @@ textarea.materialize-textarea {
 }
 
 .switch label input[type=checkbox]:checked + .lever {
-  background-color: #51c9d4;
+  background-color: #1e65a7;
 }
 
 .switch label input[type=checkbox]:checked + .lever:before, .switch label input[type=checkbox]:checked + .lever:after {
@@ -7036,7 +7036,7 @@ textarea.materialize-textarea {
 }
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #0c8d99;
+  background-color: #022444;
 }
 
 .switch label .lever {
@@ -7070,7 +7070,7 @@ textarea.materialize-textarea {
 }
 
 .switch label .lever:before {
-  background-color: rgba(12, 141, 153, 0.15);
+  background-color: rgba(2, 36, 68, 0.15);
 }
 
 .switch label .lever:after {
@@ -7083,7 +7083,7 @@ input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before,
 input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
   -webkit-transform: scale(2.4);
           transform: scale(2.4);
-  background-color: rgba(12, 141, 153, 0.15);
+  background-color: rgba(2, 36, 68, 0.15);
 }
 
 input[type=checkbox]:not(:disabled) ~ .lever:active:before,
@@ -7158,7 +7158,7 @@ select {
 }
 
 .select-wrapper input.select-dropdown:focus {
-  border-bottom: 1px solid #0c8d99;
+  border-bottom: 1px solid #022444;
 }
 
 .select-wrapper .caret {
@@ -7331,7 +7331,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #0c8d99;
+  background-color: #022444;
   margin-left: 7px;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
@@ -7343,7 +7343,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #0c8d99;
+  color: #022444;
   font-size: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -7375,21 +7375,21 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #0c8d99;
+  background: #022444;
   -webkit-transition: -webkit-box-shadow .3s;
   transition: -webkit-box-shadow .3s;
   transition: box-shadow .3s;
   transition: box-shadow .3s, -webkit-box-shadow .3s;
   -webkit-appearance: none;
-  background-color: #0c8d99;
+  background-color: #022444;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   margin: -5px 0 0 0;
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 10px rgba(12, 141, 153, 0.26);
-          box-shadow: 0 0 0 10px rgba(12, 141, 153, 0.26);
+  -webkit-box-shadow: 0 0 0 10px rgba(2, 36, 68, 0.26);
+          box-shadow: 0 0 0 10px rgba(2, 36, 68, 0.26);
 }
 
 input[type=range] {
@@ -7413,7 +7413,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #0c8d99;
+  background: #022444;
   -webkit-transition: -webkit-box-shadow .3s;
   transition: -webkit-box-shadow .3s;
   transition: box-shadow .3s;
@@ -7427,7 +7427,7 @@ input[type=range]:-moz-focusring {
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-moz-range-thumb {
-  box-shadow: 0 0 0 10px rgba(12, 141, 153, 0.26);
+  box-shadow: 0 0 0 10px rgba(2, 36, 68, 0.26);
 }
 
 input[type=range]::-ms-track {
@@ -7452,7 +7452,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #0c8d99;
+  background: #022444;
   -webkit-transition: -webkit-box-shadow .3s;
   transition: -webkit-box-shadow .3s;
   transition: box-shadow .3s;
@@ -7460,7 +7460,7 @@ input[type=range]::-ms-thumb {
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-ms-thumb {
-  box-shadow: 0 0 0 10px rgba(12, 141, 153, 0.26);
+  box-shadow: 0 0 0 10px rgba(2, 36, 68, 0.26);
 }
 
 /***************
@@ -7488,13 +7488,13 @@ input[type=range]::-ms-thumb {
 .table-of-contents a:hover {
   color: #a8a8a8;
   padding-left: 15px;
-  border-left: 1px solid #022444;
+  border-left: 1px solid #00001e;
 }
 
 .table-of-contents a.active {
   font-weight: 500;
   padding-left: 14px;
-  border-left: 2px solid #022444;
+  border-left: 2px solid #00001e;
 }
 
 .sidenav {
@@ -7568,11 +7568,11 @@ input[type=range]::-ms-thumb {
 }
 
 .sidenav li > a.btn:hover, .sidenav li > a.btn-large:hover, .sidenav li > a.btn-small:hover, .sidenav li > a.btn-large:hover {
-  background-color: #0ea3b1;
+  background-color: #03315d;
 }
 
 .sidenav li > a.btn-floating:hover {
-  background-color: #0c8d99;
+  background-color: #022444;
 }
 
 .sidenav li > a > i,
@@ -7696,7 +7696,7 @@ input[type=range]::-ms-thumb {
 
 .sidenav .collapsible-body > ul:not(.collapsible) > li.active,
 .sidenav.sidenav-fixed .collapsible-body > ul:not(.collapsible) > li.active {
-  background-color: #022444;
+  background-color: #00001e;
 }
 
 .sidenav .collapsible-body > ul:not(.collapsible) > li.active a,
@@ -7786,7 +7786,7 @@ input[type=range]::-ms-thumb {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #0c8d99;
+  border-color: #022444;
 }
 
 .spinner-blue,
@@ -8460,7 +8460,7 @@ input[type=range]::-ms-thumb {
   position: absolute;
   font-size: 1rem;
   border-radius: 50%;
-  background-color: #022444;
+  background-color: #00001e;
   -webkit-box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
           box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.14), 0 10px 50px 0 rgba(0, 0, 0, 0.12), 0 30px 10px -20px rgba(0, 0, 0, 0.2);
   width: 100%;
@@ -8662,7 +8662,7 @@ input[type=range]::-ms-thumb {
   -webkit-box-flex: 1;
       -ms-flex: 1 auto;
           flex: 1 auto;
-  background-color: #0c8d99;
+  background-color: #022444;
   color: #fff;
   padding: 20px 22px;
   font-weight: 500;
@@ -8719,11 +8719,11 @@ input[type=range]::-ms-thumb {
 }
 
 .datepicker-table td.is-today {
-  color: #0c8d99;
+  color: #022444;
 }
 
 .datepicker-table td.is-selected {
-  background-color: #0c8d99;
+  background-color: #022444;
   color: #fff;
 }
 
@@ -8745,7 +8745,7 @@ input[type=range]::-ms-thumb {
 }
 
 .datepicker-day-button:focus {
-  background-color: rgba(16, 138, 149, 0.25);
+  background-color: rgba(4, 36, 66, 0.25);
 }
 
 /* Footer */
@@ -8765,7 +8765,7 @@ input[type=range]::-ms-thumb {
 .datepicker-clear,
 .datepicker-today,
 .datepicker-done {
-  color: #0c8d99;
+  color: #022444;
   padding: 0 1rem;
 }
 
@@ -8825,7 +8825,7 @@ input[type=range]::-ms-thumb {
   -webkit-box-flex: 1;
       -ms-flex: 1 auto;
           flex: 1 auto;
-  background-color: #0c8d99;
+  background-color: #022444;
   padding: 10px;
   font-weight: 300;
 }
@@ -8915,7 +8915,7 @@ input[type=range]::-ms-thumb {
 
 .timepicker-tick.active,
 .timepicker-tick:hover {
-  background-color: rgba(12, 141, 153, 0.25);
+  background-color: rgba(2, 36, 68, 0.25);
 }
 
 .timepicker-dial {
@@ -8945,7 +8945,7 @@ input[type=range]::-ms-thumb {
 }
 
 .timepicker-canvas line {
-  stroke: #0c8d99;
+  stroke: #022444;
   stroke-width: 4;
   stroke-linecap: round;
 }
@@ -8956,12 +8956,12 @@ input[type=range]::-ms-thumb {
 
 .timepicker-canvas-bearing {
   stroke: none;
-  fill: #0c8d99;
+  fill: #022444;
 }
 
 .timepicker-canvas-bg {
   stroke: none;
-  fill: #0c8d99;
+  fill: #022444;
 }
 
 /* Footer */
@@ -8981,7 +8981,7 @@ input[type=range]::-ms-thumb {
 }
 
 .timepicker-close {
-  color: #0c8d99;
+  color: #022444;
 }
 
 .timepicker-clear,
@@ -9034,14 +9034,12 @@ blockquote {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-left: 3rem;
+  padding-bottom: 3rem;
 }
 
 #title_card {
   display: inline-block;
-}
-
-#recommendation_div {
-  width: 50%;
 }
 
 .other_titles {
@@ -9071,12 +9069,33 @@ blockquote {
   display: block;
 }
 
-.waves-effect .waves-teal .waves-ripple {
-  background-color: #00eaff;
-}
-
 .sub_btn {
   background-color: white;
+}
+
+#articles_main_grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(500px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+}
+
+.articles_sub_item {
+  margin-top: 0;
+  margin-bottom: 6rem;
+  width: 500px;
+}
+
+.article_summary {
+  font-size: 1.2rem;
+  font-weight: 300;
+  letter-spacing: .06rem;
+  line-height: 2rem;
+}
+
+.card_link {
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
 #home {
@@ -9097,14 +9116,12 @@ blockquote {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding-left: 3rem;
+  padding-bottom: 3rem;
 }
 
 #title_card {
   display: inline-block;
-}
-
-#recommendation_div {
-  width: 50%;
 }
 
 .other_titles {
@@ -9134,12 +9151,33 @@ blockquote {
   display: block;
 }
 
-.waves-effect .waves-teal .waves-ripple {
-  background-color: #00eaff;
-}
-
 .sub_btn {
   background-color: white;
+}
+
+#articles_main_grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(500px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+}
+
+.articles_sub_item {
+  margin-top: 0;
+  margin-bottom: 6rem;
+  width: 500px;
+}
+
+.article_summary {
+  font-size: 1.2rem;
+  font-weight: 300;
+  letter-spacing: .06rem;
+  line-height: 2rem;
+}
+
+.card_link {
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
 html {
@@ -9194,7 +9232,7 @@ html {
   border-bottom-left-radius: 0;
 }
 
-.card {
+.business_card {
   padding: 3rem 3rem;
   display: -ms-grid;
   display: grid;
@@ -9267,23 +9305,4 @@ html {
   color: black;
   background-color: yellow;
   cursor: default;
-}
-
-#Michael_Three {
-  background-image: url("../../img/git.png");
-  background-position: left bottom;
-  /* Center the image */
-  background-repeat: no-repeat;
-  /* Do not repeat the image */
-  background-size: 300px;
-  /* Resize the background image to cover the entire container */
-}
-
-#background_text_MO {
-  color: #B7F0F5;
-  font-size: 3rem;
-  -webkit-transform: rotate(340deg);
-          transform: rotate(340deg);
-  margin-top: -2.5rem;
-  margin-right: -4rem;
 }
