--- a/css/materialize.css
+++ b/css/materialize.css
@@ -9097,3 +9097,17 @@ blockquote {
   font-weight: 700;
   font-size: 1.5rem;
 }
+
+.sidebar_titles {
+  font-weight: 500;
+}
+
+#j_logo {
+  height: 200px;
+  cursor: pointer;
+}
+
+#p_logo {
+  height: 100px;
+  cursor: pointer;
+}
