--- a/materialize-src/sass/components/_home.scss
+++ b/materialize-src/sass/components/_home.scss
@@ -91,3 +91,16 @@ blockquote{
   font-weight: 700;
   font-size: 1.5rem;
 }
+
+.sidebar_titles{
+  font-weight: 500;
+}
+
+#j_logo{
+  height: 200px;
+  cursor: pointer;
+}
+#p_logo{
+  height:100px;
+  cursor: pointer;
+}
