--- a/css/main.css
+++ b/css/main.css
@@ -9112,6 +9112,70 @@ blockquote {
   cursor: pointer;
 }
 
+#card_stack_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 8rem;
+}
+
+.review_card {
+  width: 500px;
+  padding: 1rem;
+  -webkit-box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: .2s;
+  transition: .2s;
+  display: -ms-grid;
+  display: grid;
+}
+
+.review_card:not(:first-child) {
+  margin-left: -16rem;
+}
+
+.review_card:hover {
+  -webkit-transform: translateY(-6rem);
+          transform: translateY(-6rem);
+}
+
+.review_card:hover ~ .review_card,
+.review_card:focus-within ~ .review_card {
+  -webkit-transform: translateX(16rem);
+          transform: translateX(16rem);
+}
+
+.review_card_title {
+  margin-bottom: 0;
+  margin-top: .5rem;
+}
+
+.review_date {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.review_p {
+  font-size: 1.3rem;
+  letter-spacing: .1rem;
+  line-height: 2rem;
+}
+
+.reviewer_name {
+  font-size: 1.3rem;
+  font-weight: 300;
+  letter-spacing: .1rem;
+}
+
+.highlight_min_reviewSection {
+  color: black;
+  background-color: yellow;
+  background-position: 0 0.2em;
+  -webkit-box-shadow: inset 0 .99em 0 0 #ffffff;
+          box-shadow: inset 0 .99em 0 0 #ffffff;
+  cursor: default;
+}
+
 #home {
   padding: 8rem 8rem;
   border: 3px solid red;
@@ -9206,6 +9270,70 @@ blockquote {
 #p_logo {
   height: 100px;
   cursor: pointer;
+}
+
+#card_stack_wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 8rem;
+}
+
+.review_card {
+  width: 500px;
+  padding: 1rem;
+  -webkit-box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+          box-shadow: 4px 4px 12px 2px rgba(0, 0, 0, 0.2);
+  -webkit-transition: .2s;
+  transition: .2s;
+  display: -ms-grid;
+  display: grid;
+}
+
+.review_card:not(:first-child) {
+  margin-left: -16rem;
+}
+
+.review_card:hover {
+  -webkit-transform: translateY(-6rem);
+          transform: translateY(-6rem);
+}
+
+.review_card:hover ~ .review_card,
+.review_card:focus-within ~ .review_card {
+  -webkit-transform: translateX(16rem);
+          transform: translateX(16rem);
+}
+
+.review_card_title {
+  margin-bottom: 0;
+  margin-top: .5rem;
+}
+
+.review_date {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+.review_p {
+  font-size: 1.3rem;
+  letter-spacing: .1rem;
+  line-height: 2rem;
+}
+
+.reviewer_name {
+  font-size: 1.3rem;
+  font-weight: 300;
+  letter-spacing: .1rem;
+}
+
+.highlight_min_reviewSection {
+  color: black;
+  background-color: yellow;
+  background-position: 0 0.2em;
+  -webkit-box-shadow: inset 0 .99em 0 0 #ffffff;
+          box-shadow: inset 0 .99em 0 0 #ffffff;
+  cursor: default;
 }
 
 html {
