--- a/materialize-src/sass/components/_variables.scss
+++ b/materialize-src/sass/components/_variables.scss
@@ -107,7 +107,7 @@ $card-padding: 24px !default;
 $card-bg-color: #fff !default;
 // $card-link-color: color("orange", "accent-2") !default;
 $card-link-color: #0c8d99;
-$card-link-color-light: lighten($card-link-color, 20%) !default;
+$card-link-color-light: #022444;
 
 
 // 5. Carousel
