--- a/materialize-src/sass/components/_home.scss
+++ b/materialize-src/sass/components/_home.scss
@@ -96,10 +96,11 @@ blockquote{
 }
 .review_card{
   width: 500px;
-  padding: 1rem;
+  // padding: 1rem;
   box-shadow: 4px 4px 12px 2px rgba(black,.2);
   transition: .2s;
   display: grid;
+  // border: 1px solid $primary-color;
 }
 .review_card:not(:first-child){
   margin-left: -16rem;
@@ -114,24 +115,27 @@ blockquote{
 
 .review_card_title{
   margin-bottom: 0;
-  margin-top: .5rem;
+  margin-top: 0;
+  border: 1px solid red;
+  color: black;
 }
 
 .review_date{
-  // border: 1px solid red;
-  margin-bottom: 0;
-  margin-top: 0;
+  border: 1px solid red;
+  margin: 0 0;
+  padding: 0 0;
 }
 
 .review_p{
   font-size: 1.3rem;
-  letter-spacing: .1rem;
+  letter-spacing: .05rem;
   line-height: 2rem;
 }
 .reviewer_name{
   font-size: 1.3rem;
   font-weight: 300;
   letter-spacing:.1rem;
+  border: 1px solid orangered;
 }
 .highlight_min_reviewSection{
   color: black;
