--- a/materialize-src/sass/components/_podcasts.scss
+++ b/materialize-src/sass/components/_podcasts.scss
@@ -1,5 +1,11 @@
 #podcasts {
+  margin-top: 1rem;
   padding: 3rem 3rem;
+  background-image: url(../../../img/player_bg.jpg);
+  background-size: cover;
+}
+#podcast_h1 {
+  color: white;
 }
 #content_wrapper {
   display: grid;
@@ -23,4 +29,26 @@
 
 .title_icons {
   font-size: 2rem;
+}
+
+#right_player {
+  // padding: 3rem;
+  height: 300px;
+}
+
+.bg_text {
+  color: red;
+  font-weight: bold;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
+
+#bg_img {
+  height: 100%;
+  // background-image: url(../../../img/player_bg.jpg);
+  // background-size: cover;
+  // filter: blur(4px);
 }
