--- a/materialize-src/sass/components/_variables.scss
+++ b/materialize-src/sass/components/_variables.scss
@@ -39,7 +39,9 @@ $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
 // $secondary-color: #0c8d99 !default;
-$secondary-color: #022444 !default;
+// $secondary-color: #022444 !default;
+// $secondary-color: #03a9f4 !default;
+$secondary-color: #00001e !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
@@ -250,7 +252,7 @@ $navbar-height: 64px !default;
 $navbar-line-height: $navbar-height !default;
 $navbar-height-mobile: 56px !default;
 $navbar-line-height-mobile: $navbar-height-mobile !default;
-$navbar-font-size: 1rem !default;
+$navbar-font-size: 1.3rem !default;
 $navbar-font-color: #fff !default;
 $navbar-brand-font-size: 2.1rem !default;
 
