--- a/materialize-src/sass/components/_videos.scss
+++ b/materialize-src/sass/components/_videos.scss
@@ -1,8 +1,8 @@
 #videos {
   margin-top: 1rem;
   padding: 3rem 3rem;
-  background-image: url("https://picsum.photos/id/122/4147/2756");
-  // background-image: url("../../../img/real_video_background.jpg");
+  // background-image: url("https://picsum.photos/id/122/4147/2756");
+  background-image: url("../../../img/real_video_background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -30,7 +30,6 @@ li a {
 
 // right side content Section
 #content_1 {
-  // border: 1px solid red;
   margin-left: 1rem;
   margin-right: 1rem;
 }
@@ -52,16 +51,11 @@ li a {
 .content_section_p {
   font-size: 1.2rem;
 }
+.content_section_author {
+  font-size: 1.2rem;
+  color: #bbbbbb;
+}
 .content_section_bold {
   font-weight: 700;
   font-size: 1.2rem;
-}
-.content_section_ul {
-  // border: 1px solid red;
-  list-style-type: square;
-}
-.content_section_li {
-  border: 1px solid purple;
-  font-size: 1.2rem;
-  list-style: dot;
 }
